tests/trybuild_fails/not_sync_owner.stderr
error[E0277]: `UnsafeCell<()>` cannot be shared between threads safely
  --> tests/trybuild_fails/not_sync_owner.rs:31:18
   |
31 |     check_sync::<Pair<NotSync>>();
   |                  ^^^^^^^^^^^^^ `UnsafeCell<()>` cannot be shared between threads safely
   |
   = help: within `NotSync`, the trait `Sync` is not implemented for `UnsafeCell<()>`
note: required because it appears within the type `NotSync`
  --> tests/trybuild_fails/not_sync_owner.rs:5:8
   |
5  | struct NotSync(UnsafeCell<()>);
   |        ^^^^^^^
   = note: required for `Pair<NotSync>` to implement `Sync`
note: required by a bound in `check_sync`
  --> tests/trybuild_fails/not_sync_owner.rs:24:18
   |
24 | fn check_sync<T: Sync>() {}
   |                  ^^^^ required by this bound in `check_sync`
